feat: Add observability and metrics tracking for recommendation engine